--- a/trainers.html
+++ b/trainers.html
@@ -438,13 +438,14 @@
         <div class="border-footer-1"></div>
         <div class="container">
             <div class="footer style-1">
+                <!-- <div class="border-footer-1"></div> -->
                 <div class="location-contact">
                     <h5 class="title">LOCATION & CONTACT</h5>
-                    <p class="address"><span>Address:</span> 901 N Pitt Str., Suite 170
-                        <br> Alexandria, NY, USA
+                    <p class="address"><span>Address:</span> Darshanam Club Life, Junction of Panchavati Canal Road
+                        <br> Gorwa, Vadodara, Gujarat 390016
                     </p>
-                    <a href="mailto:example@email.com" class="email"><span>Email:</span> example@email.com</a>
-                    <p><span class="time">Open Hour:</span> Sun - Thu: Open 24/7</p>
+                    <a href="mailto:example@email.com" class="email"><span>Email:</span> strengthbarathletes@gmail.com</a>
+                    <p><span class="time">Open Hour:</span> Mon - Sat : 6:00 AM - 9:00 PM </p>
                 </div>
 
                 <div class="link-social">
@@ -453,50 +454,46 @@
                         <a href="about.html">About</a>
                         <a href="services.html">Services</a>
                         <a href="pricing.html">Pricing</a>
-                        <a href="trainer.html">Trainer</a>
+                        <a href="trainers.html">Trainer</a>
                         <a href="contact-us.html">Contact Us</a>
                     </div>
                     <div class="social">
                         <h5 class="title">SOCIAL</h5>
-                        <a href="https://www.facebook.com/">Facebook</a>
-                        <a href="https://www.instagram.com/">Instagram</a>
-                        <a href="https://www.linkedin.com/">LinkedIn</a>
-                        <a href="https://x.com/">Twitter</a>
+                        <a href="https://www.instagram.com/strengthbarathlete">Instagram</a>
+                        <a href="https://www.youtube.com/@Calitalks">Youtube</a>
                     </div>
                 </div>
 
                 <div class="logo-footer">
                     <div class="logo">
-                        <img src="assets/img/logo.svg" alt="logo">
+                        <img src="assets/img/banner.png" alt="logo">
                     </div>
-                    <p class="desp">Lorem Ipsum is simply dummy text of the print and typesetting industry. The
-                        indus stan. Lem Ipsum
-                        is dummy.</p>
-                    <a href="tel:(406)5550120" class="phone">
-                        <div class="icon">
+                    <p class="desp">Gujarat’s Biggest open-air calisthenics park, located in Vadodara.</p>
+                    <a href="tel:+918160964128" class="phone">
+                        <span class="icon">
                             <svg width="40" height="41" viewBox="0 0 40 41" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
                                 <circle cx="20" cy="20.0137" r="20" fill="#F67A45" />
-                                <g clip-path="url(#clip0_2083_460)">
+                                <g clip-path="url(#clip0_2083_46035324)">
                                     <path
                                         d="M26.7162 22.5158C25.7366 22.5158 24.7748 22.3626 23.8633 22.0614C23.4167 21.9091 22.8676 22.0488 22.595 22.3288L20.796 23.6869C18.7096 22.5732 17.4245 21.2884 16.326 19.2177L17.6441 17.4655C17.9865 17.1235 18.1094 16.624 17.9622 16.1552C17.6597 15.239 17.506 14.2776 17.506 13.2976C17.5061 12.5896 16.9301 12.0137 16.2222 12.0137H13.2839C12.576 12.0137 12 12.5896 12 13.2975C12 21.4121 18.6016 28.0137 26.7162 28.0137C27.4241 28.0137 28 27.4377 28 26.7298V23.7997C28 23.0918 27.424 22.5158 26.7162 22.5158Z"
                                         fill="white" />
                                 </g>
                                 <defs>
-                                    <clipPath id="clip0_2083_460">
+                                    <clipPath id="clip0_2083_46035324">
                                         <rect width="16" height="16" fill="white" transform="translate(12 12.0137)" />
                                     </clipPath>
                                 </defs>
                             </svg>
-                        </div>
-                        <h3 class="title">(406) 555-0120</h3>
+                        </span>
+                        <h3 class="title">+91 8160964128</h3>
                     </a>
                 </div>
             </div>
         </div>
         <div class="border-footer-2"></div>
         <div class="copyright-text">
-            <p>Copyright 2024, All Right reserved</p>
+            <p>Copyright 2025, All Right reserved</p>
         </div>
     </footer>
     <!-- End Footer -->
@@ -531,8 +528,9 @@
     <script src="assets/js/plugins/lightgallery.min.js"></script>
     <script src="assets/js/plugins/swiper.min.js"></script>
     <script src="assets/js/main.js"></script>
+
 </body>
 
 
-<!-- Mirrored from gymfito.vercel.app/trainer.html by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 17 Jan 2025 19:46:12 GMT -->
+<!-- Mirrored from gymfito.vercel.app/ by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 17 Jan 2025 19:45:43 GMT -->
 </html>
