feta : pring changed and new services added

--- a/pricing.html
+++ b/pricing.html
@@ -225,7 +225,7 @@
             <div class="package type2" data-aos="fade-up">
                 <div class="package-one style2 hover-active-class color2">
                     <div class="title">
-                        <h5> ₹2000/ ₹3500 / ₹7500</h5>
+                        <h5> ₹8999/ ₹13999 / ₹23999</h5>
                         <h3>Group Training</h3>
                         <h6>3M / 6M / 12M</h6>
                     </div>
@@ -296,9 +296,9 @@
                 </div>
                 <div class="package-two style2 hover-active-class active color2">
                     <div class="title">
-                        <h5> ₹3000</h5>
+                        <h5> ₹8999 / $12999</h5>
                         <h3>PERSONAL TRAINING</h3>
-                        <h6>Monthly</h6>
+                        <h6>3 days / 5 days</h6>
                     </div>
                     <div class="border-horizontal"></div>
                     <ul class="package-list">
