--- a/index.html
+++ b/index.html
@@ -490,7 +490,7 @@
             <div class="services-all">
                 <div class="services-card" data-aos="fade-up">
                     <div class="services-body">
-                        <a href="services-personal.html" class="services-img-content">
+                        <a class="services-img-content">
                             <img src="assets/img/services_1.png" class="services-img ak-bg" alt="...">
                             <div class="services-info">
                                 <img src="assets/img/services_icon1.svg" alt="...">
@@ -503,7 +503,7 @@
                 </div>
                 <div class="services-card mt-xl-5" data-aos="fade-up">
                     <div class="services-body">
-                        <a href="services-group.html" class="services-img-content">
+                        <a class="services-img-content">
                             <img src="assets/img/services_2.png" class="services-img ak-bg" alt="...">
                             <div class="services-info">
                                 <img src="assets/img/services_icon2.svg" alt="...">
@@ -516,7 +516,7 @@
                 </div>
                 <div class="services-card ms-xl-5" data-aos="fade-up">
                     <div class="services-body">
-                        <a href="services-kids.html" class="services-img-content">
+                        <a class="services-img-content">
                             <img src="assets/img/services_3.png" class="services-img ak-bg" alt="...">
                             <div class="services-info">
                                 <img src="assets/img/services_icon3.svg" alt="...">
@@ -529,7 +529,7 @@
                 </div>
                 <div class="services-card ps-xl-5 mt-xl-5" data-aos="fade-up">
                     <div class="services-body">
-                        <a href="services-online.html" class="services-img-content">
+                        <a class="services-img-content">
                             <img src="assets/img/services_4.png" class="services-img ak-bg" alt="...">
                             <div class="services-info">
                                 <img src="assets/img/services_icon4.svg" alt="...">
@@ -541,6 +541,28 @@
                     <div class="services-number">04</div>
                 </div>
             </div>
+
+            <div data-aos="fade-up" data-swiper-parallax="100" class="aos-init aos-animate" style="
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                padding-top : 25px;
+            ">
+            <a href="services.html" class="button-primary">
+                More Info
+                <span class="icon">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="20" viewBox="0 0 16 20" fill="none">
+                        <g clip-path="url(#clip0_1735_935564435)">
+                            <path fill-rule="evenodd" clip-rule="evenodd" d="M0.585999 18.938L9.586 9.93799L0.585999 0.937988H6.99073L15.9907 9.93799L6.99073 18.938H0.585999Z" fill="white"></path>
+                        </g>
+                        <defs>
+                            <clipPath id="clip0_1735_935564435">
+                                <rect width="16" height="19" fill="white" transform="translate(0 0.5)"></rect>
+                            </clipPath>
+                        </defs>
+                    </svg>
+                </span>
+            </a>
         </div>
         <!-- End All Services -->
 
@@ -1324,7 +1346,7 @@
                 <div class="package type2" data-aos="fade-up">
                     <div class="package-one style2 hover-active-class color2">
                         <div class="title">
-                            <h5> ₹2000/ ₹3500 / ₹7500</h5>
+                            <h5> ₹8999/ ₹13999 / ₹23999</h5>
                             <h3>Group Training</h3>
                             <h6>3M / 6M / 12M</h6>
                         </div>
@@ -1395,9 +1417,9 @@
                     </div>
                     <div class="package-two style2 hover-active-class active color2">
                         <div class="title">
-                            <h5> ₹3000</h5>
+                            <h5> ₹8999 / $12999</h5>
                             <h3>PERSONAL TRAINING</h3>
-                            <h6>Monthly</h6>
+                            <h6>3 days / 5 days</h6>
                         </div>
                         <div class="border-horizontal"></div>
                         <ul class="package-list">
