--- a/services.html
+++ b/services.html
@@ -221,7 +221,7 @@
         <div class="services-all">
             <div class="services-card" data-aos="fade-up">
                 <div class="services-body">
-                    <a href="services-personal.html" class="services-img-content">
+                    <a class="services-img-content">
                         <img src="assets/img/services_1.png" class="services-img ak-bg" alt="...">
                         <div class="services-info">
                             <img src="assets/img/services_icon1.svg" alt="...">
@@ -234,7 +234,7 @@
             </div>
             <div class="services-card mt-xl-5" data-aos="fade-up">
                 <div class="services-body">
-                    <a href="services-group.html" class="services-img-content">
+                    <a class="services-img-content">
                         <img src="assets/img/services_2.png" class="services-img ak-bg" alt="...">
                         <div class="services-info">
                             <img src="assets/img/services_icon2.svg" alt="...">
@@ -247,7 +247,7 @@
             </div>
             <div class="services-card ms-xl-5" data-aos="fade-up">
                 <div class="services-body">
-                    <a href="services-kids.html" class="services-img-content">
+                    <a class="services-img-content">
                         <img src="assets/img/services_3.png" class="services-img ak-bg" alt="...">
                         <div class="services-info">
                             <img src="assets/img/services_icon3.svg" alt="...">
@@ -260,7 +260,7 @@
             </div>
             <div class="services-card ps-xl-5 mt-xl-5" data-aos="fade-up">
                 <div class="services-body">
-                    <a href="services-online.html" class="services-img-content">
+                    <a  class="services-img-content">
                         <img src="assets/img/services_4.png" class="services-img ak-bg" alt="...">
                         <div class="services-info">
                             <img src="assets/img/services_icon4.svg" alt="...">
@@ -270,6 +270,89 @@
                     </a>
                 </div>
                 <div class="services-number">04</div>
+            </div>
+            <div class="services-card mt-xl-5" data-aos="fade-up">
+                <div class="services-body">
+                    <a  class="services-img-content">
+                        <img src="assets/img/services_5.png" class="services-img ak-bg" alt="...">
+                        <div class="services-info">
+                            <img src="assets/img/services_icon5.svg" alt="...">
+                            <h4 class="services-title">Calisthenics</h4>
+                            <p class="services-text">Master your body with strength and control-focused movements that require minimal equipment and maximum precision.</p>
+                        </div>
+                    </a>
+                </div>
+                <div class="services-number">05</div>
+            </div>
+
+            <div class="services-card ms-xl-5" data-aos="fade-up">
+                <div class="services-body">
+                    <a class="services-img-content">
+                        <img src="assets/img/services_6.png" class="services-img ak-bg" alt="...">
+                        <div class="services-info">
+                            <img src="assets/img/services_icon6.svg" alt="...">
+                            <h4 class="services-title">Functional Training</h4>
+                            <p class="services-text">Enhance your everyday movements through exercises that mimic real-life actions, building strength, stability, and mobility.</p>
+                        </div>
+                    </a>
+                </div>
+                <div class="services-number">06</div>
+            </div>
+    
+            <!-- New Service 07 - Fat Loss -->
+            <div class="services-card ps-xl-5 mt-xl-5" data-aos="fade-up">
+                <div class="services-body">
+                    <a  class="services-img-content">
+                        <img src="assets/img/classes_3.jpg" class="services-img ak-bg" alt="...">
+                        <div class="services-info">
+                            <img src="assets/img/services_icon6.svg" alt="...">
+                            <h4 class="services-title">Fat Loss</h4>
+                            <p class="services-text">Scientifically structured programs focused on burning fat effectively while retaining lean muscle and boosting metabolism.</p>
+                        </div>
+                    </a>
+                </div>
+                <div class="services-number">07</div>
+            </div>
+    
+            <!-- New Service 08 - Strength Training -->
+            <div class="services-card mt-xl-5" data-aos="fade-up">
+                <div class="services-body">
+                    <a class="services-img-content">
+                        <img src="assets/img/classes_7.jpg" class="services-img ak-bg" alt="...">
+                        <div class="services-info">
+                            <img src="assets/img/services_icon6.svg" alt="...">
+                            <h4 class="services-title">Strength Training</h4>
+                            <p class="services-text">Build a strong, powerful physique through progressive overload and compound lifts tailored to your goals.</p>
+                        </div>
+                    </a>
+                </div>
+                <div class="services-number">08</div>
+            </div>
+            <div class="services-card ms-xl-5" data-aos="fade-up">
+                <div class="services-body">
+                    <a class="services-img-content">
+                        <img src="assets/img/classes_8.jpg" class="services-img ak-bg" alt="...">
+                        <div class="services-info">
+                            <img src="assets/img/services_icon6.svg" alt="...">
+                            <h4 class="services-title">Bodyweight Training</h4>
+                            <p class="services-text">Utilize your body as the ultimate training tool—improving agility, endurance, and strength with minimal equipment.</p>
+                        </div>
+                    </a>
+                </div>
+                <div class="services-number">09</div>
+            </div>
+            <div class="services-card ps-xl-5 mt-xl-5" data-aos="fade-up">
+                <div class="services-body">
+                    <a class="services-img-content">
+                        <img src="assets/img/feature_1.png" class="services-img ak-bg" alt="...">
+                        <div class="services-info">
+                            <img src="assets/img/services_icon6.svg" alt="...">
+                            <h4 class="services-title">Skill Learning</h4>
+                            <p class="services-text">Focused sessions to help you master specific skills like handstands, muscle-ups, mobility drills, or flexibility flows.</p>
+                        </div>
+                    </a>
+                </div>
+                <div class="services-number">10</div>
             </div>
         </div>
     </div>
