--- a/index.html
+++ b/index.html
@@ -542,7 +542,7 @@
                 </div>
             </div>
 
-            <!-- <div data-aos="fade-up" data-swiper-parallax="100" class="aos-init aos-animate" style="
+            <div data-aos="fade-up" data-swiper-parallax="100" class="aos-init aos-animate" style="
                 display: flex;
                 justify-content: center;
                 align-items: center;
@@ -563,7 +563,7 @@
                     </svg>
                 </span>
             </a>
-        </div> -->
+        </div>
         <!-- End All Services -->
 
     <!-- Start Upcoming Classes -->
