--- a/about.html
+++ b/about.html
@@ -26,61 +26,13 @@
 <body>
 
 
-    <!-- Start Header Section -->
-    <header class="ak-site_header ak-style1 ak-sticky_header">
+      <!-- Start Header Section -->
+      <header class="ak-site_header ak-style1 ak-sticky_header">
         <div class="top-header-info">
             <div class="email-info">
                 <a href="emailto:example@email.com">strengthbarathletes@gmail.com</a>
-                <p class="location-desp">Darshanam Club Life Junction of Panchavati Canal Road, Club Life Rd, Gorwa,
-                    Vadodara, Gujarat</p>
+                <p class="location-desp">Darshanam Club Life Junction of Panchavati Canal Road, Club Life Rd, Gorwa, Vadodara, Gujarat</p>
             </div>
-            <!-- <div class="d-flex gap-4 align-items-center">
-                <a href="https://www.facebook.com/">
-                    <svg width="16" height="17" viewBox="0 0 16 17" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <g clip-path="url(#clip0_365_2385)">
-                            <path
-                                d="M9.2381 16.9756L9.2381 9.67777L11.6867 9.67777L12.0541 6.83284H9.2381V5.01676C9.2381 4.19335 9.46582 3.6322 10.6479 3.6322L12.1532 3.63158V1.08697C11.8929 1.05314 10.9993 0.975586 9.95931 0.975586C7.78764 0.975586 6.30087 2.30116 6.30087 4.735L6.30087 6.83284H3.84485L3.84485 9.67777H6.30087L6.30087 16.9756H9.2381Z"
-                                fill="white" />
-                        </g>
-                        <defs>
-                            <clipPath id="clip0_365_2385">
-                                <rect width="16" height="16" fill="white"
-                                    transform="translate(-0.000976562 0.975586)" />
-                            </clipPath>
-                        </defs>
-                    </svg>
-
-                </a>
-                <a href="https://www.linkedin.com/">
-                    <svg width="16" height="17" viewBox="0 0 16 17" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <g clip-path="url(#clip0_365_2387)">
-                            <path
-                                d="M15.995 16.9761L15.999 16.9754L15.999 11.1074C15.999 8.23672 15.381 6.02539 12.025 6.02539C10.4117 6.02539 9.32899 6.91072 8.88699 7.75006H8.84033V6.29339L5.65833 6.29339L5.65833 16.9754H8.97166L8.97166 11.6861C8.97166 10.2934 9.23566 8.94672 10.9603 8.94672C12.6597 8.94672 12.685 10.5361 12.685 11.7754L12.685 16.9761H15.995Z"
-                                fill="white" />
-                            <path d="M0.263062 6.29395L3.5804 6.29395L3.5804 16.9759H0.263062L0.263062 6.29395Z"
-                                fill="white" />
-                            <path
-                                d="M1.92036 0.975586C0.85969 0.975586 -0.000976563 1.83625 -0.000976563 2.89692C-0.000976563 3.95759 0.85969 4.83625 1.92036 4.83625C2.98102 4.83625 3.84169 3.95759 3.84169 2.89692C3.84102 1.83625 2.98036 0.975586 1.92036 0.975586Z"
-                                fill="white" />
-                        </g>
-                        <defs>
-                            <clipPath id="clip0_365_2387">
-                                <rect width="16" height="16" fill="white"
-                                    transform="translate(-0.000976562 0.975586)" />
-                            </clipPath>
-                        </defs>
-                    </svg>
-
-                </a>
-                <a href="https://x.com/">
-                    <svg width="16" height="17" viewBox="0 0 16 17" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path
-                            d="M9.2757 7.92516L14.2721 2.11719H13.0882L8.74973 7.16017L5.28465 2.11719H1.28809L6.52797 9.74307L1.28809 15.8336H2.47215L7.05364 10.5081L10.713 15.8336H14.7096L9.27541 7.92516H9.2757ZM7.65396 9.81025L7.12305 9.05089L2.89879 3.00853H4.71745L8.12647 7.88491L8.65738 8.64427L13.0887 14.9828H11.2701L7.65396 9.81054V9.81025Z"
-                            fill="white" />
-                    </svg>
-
-                </a>
-            </div> -->
         </div>
         <div class="ak-main_header">
             <div class="ak-main_header_in style-2">
@@ -94,7 +46,7 @@
                                 <a href="index.html">Home</a>
                             </li>
                             <li>
-                                <a href="trainers.html">Trainers</a>
+                                <a href="founder.html">Founder</a>
                             </li>
                             <li>
                                 <a href="calender.html">Calender</a>
@@ -117,7 +69,7 @@
                         </ul>
                     </div>
                 </div>
-
+        
                 <div class="ak-main-header-right">
                     <a href="contact-us.html" class="button-primary color2">
                         BECOME A MEMBER
@@ -130,6 +82,7 @@
 
     </header>
     <!-- End Header Section -->
+
 
     <!-- Start offcanvas body -->
     <div class="offcanvas offcanvas-end style-2" tabindex="-1" id="offcanvasRight">
