--- a/trainers.html
+++ b/trainers.html
@@ -222,7 +222,7 @@
     <div class="container">
         <div class="team-content">
             <div class="team-card" data-aos="fade-up">
-                <a href="trainer-pankaj.html">
+                <a href="founder.html">
                     <div class="team-header-info">
                         <img src="assets/img/team_1.jpg" class="card-img-top" alt="...">
                     </div>
