--- a/services.html
+++ b/services.html
@@ -271,7 +271,7 @@
             <div class="services-card mt-xl-5" data-aos="fade-up">
                 <div class="services-body">
                     <a class="services-img-content">
-                        <img src="assets/img/classes_7.jpg" class="services-img ak-bg obacity_images" alt="...">
+                        <img src="assets/img/strength-training.jpg" class="services-img ak-bg obacity_images" alt="...">
                         <div class="services-info">
                             <img src="assets/img/services_icon3.svg" alt="...">
                             <h4 class="services-title">Strength Training</h4>
