--- a/index.html
+++ b/index.html
@@ -444,7 +444,7 @@
                 <div class="services-card" data-aos="fade-up">
                     <div class="services-body">
                         <a class="services-img-content">
-                            <img src="assets/img/services_1.png" class="services-img ak-bg obacity_images" alt="...">
+                            <img src="assets/img/personal_training.png" class="services-img ak-bg obacity_images" alt="...">
                             <div class="services-info">
                                 <img src="assets/img/services_icon1.svg" alt="...">
                                 <h4 class="services-title">Personal Training</h4>
@@ -454,10 +454,10 @@
                     </div>
                     <div class="services-number">01</div>
                 </div>
-                <div class="services-card mt-xl-5" data-aos="fade-up">
+                <div class="services-card" data-aos="fade-up">
                     <div class="services-body">
                         <a class="services-img-content">
-                            <img src="assets/img/services_2.png" class="services-img ak-bg obacity_images" alt="...">
+                            <img src="assets/img/group-training.jpg" class="services-img ak-bg obacity_images" alt="...">
                             <div class="services-info">
                                 <img src="assets/img/services_icon2.svg" alt="...">
                                 <h4 class="services-title">Group Training</h4>
@@ -467,10 +467,10 @@
                     </div>
                     <div class="services-number">02</div>
                 </div>
-                <div class="services-card ms-xl-5" data-aos="fade-up">
+                <div class="services-card" data-aos="fade-up">
                     <div class="services-body">
                         <a class="services-img-content">
-                            <img src="assets/img/services_3.png" class="services-img ak-bg obacity_images" alt="...">
+                            <img src="assets/img/kids-training.jpg" class="services-img ak-bg obacity_images" alt="...">
                             <div class="services-info">
                                 <img src="assets/img/services_icon3.svg" alt="...">
                                 <h4 class="services-title">Kids Training</h4>
@@ -480,10 +480,10 @@
                     </div>
                     <div class="services-number">03</div>
                 </div>
-                <div class="services-card ps-xl-5 mt-xl-5" data-aos="fade-up">
+                <div class="services-card" data-aos="fade-up">
                     <div class="services-body">
                         <a class="services-img-content">
-                            <img src="assets/img/services_4.png" class="services-img ak-bg obacity_images" alt="...">
+                            <img src="assets/img/online-training.jpg" class="services-img ak-bg obacity_images" alt="...">
                             <div class="services-info">
                                 <img src="assets/img/services_icon4.svg" alt="...">
                                 <h4 class="services-title">Online Training</h4>
