--- a/services.html
+++ b/services.html
@@ -185,7 +185,7 @@
                 </div>
                 <div class="services-number">01</div>
             </div>
-            <div class="services-card mt-xl-5" data-aos="fade-up">
+            <div class="services-card" data-aos="fade-up">
                 <div class="services-body">
                     <a class="services-img-content">
                         <img src="assets/img/group-training.jpg" class="services-img ak-bg obacity_images" alt="...">
@@ -198,7 +198,7 @@
                 </div>
                 <div class="services-number">02</div>
             </div>
-            <div class="services-card ms-xl-5" data-aos="fade-up">
+            <div class="services-card" data-aos="fade-up">
                 <div class="services-body">
                     <a class="services-img-content">
                         <img src="assets/img/kids-training.jpg" class="services-img ak-bg obacity_images" alt="...">
@@ -211,10 +211,10 @@
                 </div>
                 <div class="services-number">03</div>
             </div>
-            <div class="services-card ps-xl-5 mt-xl-5" data-aos="fade-up">
+            <div class="services-card" data-aos="fade-up">
                 <div class="services-body">
                     <a  class="services-img-content">
-                        <img src="assets/img/services_4.png" class="services-img ak-bg obacity_images" alt="...">
+                        <img src="assets/img/online-training.jpg" class="services-img ak-bg obacity_images" alt="...">
                         <div class="services-info">
                             <img src="assets/img/services_icon4.svg" alt="...">
                             <h4 class="services-title">Online Training</h4>
@@ -224,10 +224,10 @@
                 </div>
                 <div class="services-number">04</div>
             </div>
-            <div class="services-card mt-xl-5" data-aos="fade-up">
+            <div class="services-card" data-aos="fade-up">
                 <div class="services-body">
                     <a  class="services-img-content">
-                        <img src="assets/img/services_5.png" class="services-img ak-bg obacity_images" alt="...">
+                        <img src="assets/img/calisthenics-training.jpg" class="services-img ak-bg obacity_images" alt="...">
                         <div class="services-info">
                             <img src="assets/img/services_icon5.svg" alt="...">
                             <h4 class="services-title">Calisthenics</h4>
@@ -238,7 +238,7 @@
                 <div class="services-number">05</div>
             </div>
 
-            <div class="services-card ms-xl-5" data-aos="fade-up">
+            <div class="services-card" data-aos="fade-up">
                 <div class="services-body">
                     <a class="services-img-content">
                         <img src="assets/img/functional-training.jpg" class="services-img ak-bg obacity_images" alt="...">
@@ -253,7 +253,7 @@
             </div>
     
             <!-- New Service 07 - Fat Loss -->
-            <div class="services-card ps-xl-5 mt-xl-5" data-aos="fade-up">
+            <div class="services-card" data-aos="fade-up">
                 <div class="services-body">
                     <a  class="services-img-content">
                         <img src="assets/img/classes_3.jpg" class="services-img ak-bg obacity_images" alt="...">
@@ -268,7 +268,7 @@
             </div>
     
             <!-- New Service 08 - Strength Training -->
-            <div class="services-card mt-xl-5" data-aos="fade-up">
+            <div class="services-card" data-aos="fade-up">
                 <div class="services-body">
                     <a class="services-img-content">
                         <img src="assets/img/strength-training.jpg" class="services-img ak-bg obacity_images" alt="...">
@@ -281,7 +281,7 @@
                 </div>
                 <div class="services-number">08</div>
             </div>
-            <div class="services-card ms-xl-5" data-aos="fade-up">
+            <div class="services-card" data-aos="fade-up">
                 <div class="services-body">
                     <a class="services-img-content">
                         <img src="assets/img/classes_8.jpg" class="services-img ak-bg obacity_images" alt="...">
@@ -294,10 +294,10 @@
                 </div>
                 <div class="services-number">09</div>
             </div>
-            <div class="services-card ps-xl-5 mt-xl-5" data-aos="fade-up">
+            <div class="services-card" data-aos="fade-up">
                 <div class="services-body">
                     <a class="services-img-content">
-                        <img src="assets/img/feature_1.png" class="services-img ak-bg obacity_images" alt="...">
+                        <img src="assets/img/skill-training.jpg" class="services-img ak-bg obacity_images" alt="...">
                         <div class="services-info">
                             <img src="assets/img/services_icon2.svg" alt="...">
                             <h4 class="services-title">Skill Learning</h4>
