--- a/index.html
+++ b/index.html
@@ -1119,7 +1119,7 @@
     <section class="container">
         <div class="testimonial">
             <div class="testimonial-img image-hover-animation animation-2s" data-aos="fade-right">
-                <img src="assets/img/testimonial.jpg" alt="...">
+                <img src="assets/img/feedback.jpg" alt="...">
             </div>
             <div class="testimonial-info" data-aos="fade-left">
                 <h2 class="stroke-text" data-text="Feedback!">
@@ -1734,7 +1734,7 @@
                     <div class="logo">
                         <img src="assets/img/banner.png" alt="logo">
                     </div>
-                    <p class="desp">Gujarat’s Biggest open-air calisthenics park, located in Vadodara.</p>
+                    <p class="desp">Gujarat’s biggest open-air calisthenics park, located in Vadodara.</p>
                     <a href="tel:+918160964128" class="phone">
                         <span class="icon">
                             <svg width="40" height="41" viewBox="0 0 40 41" fill="none"
