--- a/services-calisthenics.html
+++ b/services-calisthenics.html
@@ -622,7 +622,7 @@
                     <div class="logo">
                         <img src="assets/img/banner.png" alt="logo">
                     </div>
-                    <p class="desp">Gujarat’s Biggest open-air calisthenics park, located in Vadodara.</p>
+                    <p class="desp">Gujarat’s biggest open-air calisthenics park, located in Vadodara.</p>
                     <a href="tel:+918160964128" class="phone">
                         <span class="icon">
                             <svg width="40" height="41" viewBox="0 0 40 41" fill="none"
