--- a/founder.html
+++ b/founder.html
@@ -226,9 +226,12 @@
                     </a>
                     <p class="ak-secondary-font ak-font-18">Video Introduction</p>
                 </div>
-                <p>Hi, I’m Pankaj Pasi, the proud owner and head trainer at Strength Bar Athlete, a dedicated calisthenics gym where fitness meets creativity.
-                    With a passion for functional strength, mobility, and bodyweight training,
-                 I help individuals unlock their potential through personalized calisthenics programs.</p>
+                <p>
+                    Hi, I’m Pankaj Pasi, a passionate calisthenics expert with over 10 years of experience in the fitness industry. In 2020, I established Gujarat’s biggest and Vadodara’s first open-air calisthenics park, Strength Bar Athlete (SBA), located in New Alkapuri, Gotri. SBA is more than just a fitness park—it’s a hub for building strength, confidence, and community.
+                    <br><br>
+                    At Strength Bar Athlete, we focus on making fitness simple, accessible, and enjoyable for everyone. Our mission is to teach calisthenics in the easiest way possible, empowering people of all ages and fitness levels to achieve their goals. Whether you’re starting with the basics or pushing your limits with advanced skills, we’re here to guide and support you.
+                    <br><br>
+                    My vision is to help people cultivate long-term fitness and happiness by creating impactful fitness content and fostering a vibrant, supportive community. Join us, and let’s redefine fitness together!                </p>
                 <div class="ak-height-45 ak-height-lg-30"></div>
                 <div class="d-flex gap-5 ak-font-18">
                     <p class="ak-primary-color">Address: </p>
@@ -445,7 +448,7 @@
                     <div class="logo">
                         <img src="assets/img/banner.png" alt="logo">
                     </div>
-                    <p class="desp">Gujarat’s Biggest open-air calisthenics park, located in Vadodara.</p>
+                    <p class="desp">Gujarat’s biggest open-air calisthenics park, located in Vadodara.</p>
                     <a href="tel:+918160964128" class="phone">
                         <span class="icon">
                             <svg width="40" height="41" viewBox="0 0 40 41" fill="none"
