--- a/services.html
+++ b/services.html
@@ -284,7 +284,7 @@
             <div class="services-card" data-aos="fade-up">
                 <div class="services-body">
                     <a class="services-img-content">
-                        <img src="assets/img/classes_8.jpg" class="services-img ak-bg obacity_images" alt="...">
+                        <img src="assets/img/bodybuilding-training.jpg" class="services-img ak-bg obacity_images" alt="...">
                         <div class="services-info">
                             <img src="assets/img/services_icon3.svg" alt="...">
                             <h4 class="services-title">Bodyweight Training</h4>
@@ -350,7 +350,7 @@
                     <div class="logo">
                         <img src="assets/img/banner.png" alt="logo">
                     </div>
-                    <p class="desp">Gujarat’s Biggest open-air calisthenics park, located in Vadodara.</p>
+                    <p class="desp">Gujarat’s biggest open-air calisthenics park, located in Vadodara.</p>
                     <a href="tel:+918160964128" class="phone">
                         <span class="icon">
                             <svg width="40" height="41" viewBox="0 0 40 41" fill="none"
