--- a/index.html
+++ b/index.html
@@ -89,31 +89,6 @@
         </div>
         <div class="offcanvas-body">
             <div class="offcanvas-body-coustom-style">
-                <!-- <a class="ak-site_branding" href="index.html">
-                    <img src="assets/img/banner.png" alt="...">
-                </a>
-                <p class="desp">Gymfito is a simply dummy text of the print and typesetting industry.</p>
-                <div class="row row-cols-3 g-2 mt-4">
-                    <div class="col">
-                        <img src="assets/img/mini-gallery-1.jpg" class="img-fluid" alt="...">
-                    </div>
-                    <div class="col">
-                        <img src="assets/img/mini-gallery-2.jpg" class="img-fluid" alt="...">
-                    </div>
-                    <div class="col">
-                        <img src="assets/img/mini-gallery-3.jpg" class="img-fluid" alt="...">
-                    </div>
-                    <div class="col">
-                        <img src="assets/img/mini-gallery-4.jpg" class="img-fluid" alt="...">
-                    </div>
-                    <div class="col">
-                        <img src="assets/img/mini-gallery-5.jpg" class="img-fluid" alt="...">
-                    </div>
-                    <div class="col">
-                        <img src="assets/img/mini-gallery-6.jpg" class="img-fluid" alt="...">
-                    </div>
-                </div> -->
-
                 <div class="location-contant">
                     <h5 class="location-contant-title">LOCATION & CONTACT</h5>
                     <h6 class="location-contant-text"><span>Address:</span> Darshanam Club Life Junction of Panchavati Canal Road, Club Life Rd, Gorwa, Vadodara, Gujarat 390016</h6>
@@ -157,7 +132,7 @@
         <div class="swiper-wrapper">
             <div class="swiper-slide">
                 <div class="ak-hero ak-style2">
-                    <img src="assets/img/hero_slider_bg_4.png" class="ak-hero-bg ak-bg object-cover" alt="...">
+                    <img src="assets/img/banner1.jpg" class="ak-hero-bg ak-bg object-cover obacity_images" alt="...">
                     <div class="hero-content-2">
                         <div class="hero-stroke-text">
                             <h2 class="stroke-text hero-stroke-text-one" data-swiper-parallax="300">
@@ -197,7 +172,7 @@
             </div>
             <div class="swiper-slide">
                 <div class="ak-hero ak-style2">
-                    <img src="assets/img/hero_slider_bg_5.png" class="ak-hero-bg ak-bg object-cover" alt="...">
+                    <img src="assets/img/banner2.png" class="ak-hero-bg ak-bg object-cover obacity_images" alt="...">
                     <div class="hero-content-2">
                         <div class="hero-stroke-text">
                             <h2 class="stroke-text hero-stroke-text-one" data-swiper-parallax="300">
