--- a/services.html
+++ b/services.html
@@ -256,7 +256,7 @@
             <div class="services-card" data-aos="fade-up">
                 <div class="services-body">
                     <a  class="services-img-content">
-                        <img src="assets/img/classes_3.jpg" class="services-img ak-bg obacity_images" alt="...">
+                        <img src="assets/img/fatloss-training.jpeg" class="services-img ak-bg obacity_images" alt="...">
                         <div class="services-info">
                             <img src="assets/img/services_icon6.svg" alt="...">
                             <h4 class="services-title">Fat Loss</h4>
