--- a/founder.html
+++ b/founder.html
@@ -168,11 +168,10 @@
 
 
     <!-- Start Trainer Details -->
-    <div class="ak-height-135 ak-height-lg-80"></div>
     <div class="container">
         <div class="trainer-details">
             <div class="trainer-details-img" data-aos="fade-right">
-                <img src="assets/img/founder.png" alt="..." class="w-100">
+                <img src="assets/img/founder (2).png" alt="..." class="w-100">
                 <div class="icon-details">
                     <div class="icon">
                         <svg width="40" height="41" viewBox="0 0 40 41" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -214,10 +213,8 @@
 
             </div>
             <div class="trainer-content" data-aos="fade-left">
-                <h3 class="trainer-content-title">
-                    About Pankaj Pasi
-                </h3>
-                <div class="d-flex gap-2 align-items-center mb-2">
+               
+                <!-- <div class="d-flex gap-2 align-items-center mb-2">
                     <a href="https://www.youtube.com/watch?v=xCXQBn2JUbc"
                         class="ak-video-block ak-style1 ak-video-open type_2">
                         <span class="ak-heartbeat-btn">
@@ -225,7 +222,7 @@
                         </span>
                     </a>
                     <p class="ak-secondary-font ak-font-18">Video Introduction</p>
-                </div>
+                </div> -->
                 <p>
                     Hi, I’m Pankaj Pasi, a passionate calisthenics expert with over 10 years of experience in the fitness industry. In 2020, I established Gujarat’s biggest and Vadodara’s first open-air calisthenics park, Strength Bar Athlete (SBA), located in New Alkapuri, Gotri. SBA is more than just a fitness park—it’s a hub for building strength, confidence, and community.
                     <br><br>
