--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                         <p class="hero-desp" data-swiper-parallax="400">It's a revolution of discipline, determination, and growth. Step into the arena, break limits, and spark the evolution that sets you apart. Your revolution begins now.
                         </p>
                         <div data-aos="fade-up" data-aos-delay="600">
-                            <a href="classes.html" class="button-primary">
+                            <a href="contact-us.html" class="button-primary">
                                 CONTACT US
                                 <span class="icon"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="20"
                                         viewBox="0 0 16 20" fill="none">
@@ -235,6 +235,28 @@
             <div class="moving-section-in">
                 <div class="moving-section">
                     <h4 class="moving-text">
+                        <span><img src="assets/img/next.svg" alt="next-arrow"></span>
+                        <span>Rise up</span>
+                        <span><img src="assets/img/next.svg" alt="next-arrow"></span>
+                        <span> never give up</span>
+                        <span><img src="assets/img/next.svg" alt="next-arrow"></span>
+                        <span>Train hard</span>
+                        <span><img src="assets/img/next.svg" alt="next-arrow"></span>
+                        <span>Train hard </span>
+                        <span><img src="assets/img/next.svg" alt="next-arrow"></span>
+                        <span>stay humble</span>
+                        <span><img src="assets/img/next.svg" alt="next-arrow"></span>
+                        <span>stay humble</span>
+                        <span><img src="assets/img/next.svg" alt="next-arrow"></span>
+                        <span>be proud</span>
+                        <span><img src="assets/img/next.svg" alt="next-arrow"></span>
+                        <span>Believe in yourself </span>
+
+                    </h4>
+                </div>
+                <div class="moving-section">
+                    <h4 class="moving-text">
+                        <span><img src="assets/img/next.svg" alt="next-arrow"></span>
                         <span> Rise up </span>
                         <span><img src="assets/img/next.svg" alt="next-arrow"></span>
                         <span> never give up</span>
@@ -249,12 +271,14 @@
                         <span><img src="assets/img/next.svg" alt="next-arrow"></span>
                         <span>be proud</span>
                         <span><img src="assets/img/next.svg" alt="next-arrow"></span>
-                        <span>Believe in yourself</span>
-
+                        <span> Believe in yourself </span>
                     </h4>
                 </div>
                 <div class="moving-section">
-                    <h4 class="moving-text"><span> Rise up </span>
+                    <h4 class="moving-text">
+                    <span><img src="assets/img/next.svg" alt="next-arrow"></span>
+                        
+                        <span> Rise up </span>
                         <span><img src="assets/img/next.svg" alt="next-arrow"></span>
                         <span> never give up</span>
                         <span><img src="assets/img/next.svg" alt="next-arrow"></span>
@@ -268,25 +292,7 @@
                         <span><img src="assets/img/next.svg" alt="next-arrow"></span>
                         <span>be proud</span>
                         <span><img src="assets/img/next.svg" alt="next-arrow"></span>
-                        <span>Believe in yourself</span>
-                    </h4>
-                </div>
-                <div class="moving-section">
-                    <h4 class="moving-text"><span> Rise up </span>
-                        <span><img src="assets/img/next.svg" alt="next-arrow"></span>
-                        <span> never give up</span>
-                        <span><img src="assets/img/next.svg" alt="next-arrow"></span>
-                        <span>Train hard</span>
-                        <span><img src="assets/img/next.svg" alt="next-arrow"></span>
-                        <span>Train hard </span>
-                        <span><img src="assets/img/next.svg" alt="next-arrow"></span>
-                        <span>stay humble</span>
-                        <span><img src="assets/img/next.svg" alt="next-arrow"></span>
-                        <span>stay humble</span>
-                        <span><img src="assets/img/next.svg" alt="next-arrow"></span>
-                        <span>be proud</span>
-                        <span><img src="assets/img/next.svg" alt="next-arrow"></span>
-                        <span>Believe in yourself</span>
+                        <span>Believe in yourself </span>
                     </h4>
                 </div>
             </div>
@@ -295,6 +301,7 @@
             <div class="moving-section-in">
                 <div class="moving-section slide-left">
                     <h4 class="moving-text">
+                        <span><img src="assets/img/next-black.svg" alt="next-arrow"></span>
                         <span>Sweat now, shine later</span>
                         <span><img src="assets/img/next-black.svg" alt="next-arrow"></span>
                         <span>Stronger every rep</span>
@@ -303,11 +310,12 @@
                         <span><img src="assets/img/next-black.svg" alt="next-arrow"></span>
                         <span>Push your limits</span>
                         <span><img src="assets/img/next-black.svg" alt="next-arrow"></span>
-                        <span>exceed your expectations</span>
+                        <span>exceed your expectations </span>
                     </h4>
                 </div>
                 <div class="moving-section slide-left">
                     <h4 class="moving-text">
+                        <span><img src="assets/img/next-black.svg" alt="next-arrow"></span>
                         <span>Sweat now, shine later</span>
                         <span><img src="assets/img/next-black.svg" alt="next-arrow"></span>
                         <span>Stronger every rep</span>
@@ -316,12 +324,13 @@
                         <span><img src="assets/img/next-black.svg" alt="next-arrow"></span>
                         <span>Push your limits</span>
                         <span><img src="assets/img/next-black.svg" alt="next-arrow"></span>
-                        <span>exceed your expectations</span>
+                        <span>exceed your expectations </span>
                     </h4>
                 </div>
                 <div class="moving-section slide-left">
                     <h4 class="moving-text">
-                        <span>Sweat now, shine later</span>
+                        <span><img src="assets/img/next-black.svg" alt="next-arrow"></span>
+                        <span> Sweat now, shine later</span>
                         <span><img src="assets/img/next-black.svg" alt="next-arrow"></span>
                         <span>Stronger every rep</span>
                         <span><img src="assets/img/next-black.svg" alt="next-arrow"></span>
@@ -329,7 +338,7 @@
                         <span><img src="assets/img/next-black.svg" alt="next-arrow"></span>
                         <span>Push your limits</span>
                         <span><img src="assets/img/next-black.svg" alt="next-arrow"></span>
-                        <span>exceed your expectations</span>
+                        <span>exceed your expectations </span>
                     </h4>
                 </div>
             </div>
